# sam_trader

./: .env.example  .gitignore  .ralph_checkpoint.json  AGENTS.md  README.md  deploy.sh  manifest  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
config/: TEST_MAP.yaml  bundles.example.yaml  gap_scanner.yaml  market_config.yaml  premarket_watchlist.yaml  ralph_preflight.sh
docker/: Dockerfile  Dockerfile.futu-opend  Dockerfile.services  HEALTHCHECK_PATTERN.md  com.samtrader.monitor.plist  docker-compose.verify.yml  docker-compose.yml  entrypoint.sh  host-monitor.sh  requirements.txt
docker/futu-opend/: FutuOpenD.xml  futu.pem.pub  healthcheck.sh  start.py  start.sh
docs/agent/: PROGRESS.md  PROMPT.md  TICKET_PLAN_V3.md
docs/reference/: BUILD_PHASE_0.md  BUILD_PHASE_1.md  BUILD_PHASE_10.md  BUILD_PHASE_11.md  BUILD_PHASE_12_FUTURE.md  BUILD_PHASE_2.md  BUILD_PHASE_3.md  BUILD_PHASE_4.md  BUILD_PHASE_5.md  BUILD_PHASE_6.md  BUILD_PHASE_7.md  BUILD_PHASE_8.md  BUILD_PHASE_9.md  BUILD_PLAN_12.1.md  BUILD_PLAN_12.2.md  BUILD_PLAN_12.3.md  GAP_ANALYSIS_RISK_STRATEGY_JOURNAL_PERF.md  OPERATOR_GUIDE.html  REGRESSION_CHECKLIST_P6_P8.md  SAM_TRADER_V3_PLAN.md  futubull_opend_assessment.html  orb_strategy_enhancement_spec.md  orb_strategy_evaluation.md  roadmap-version-guide.html  roadmap_gaps_todo.md  update-beads-tickets.md
docs/user/: ACCOUNT_DISCOVERY_FIX_29MAY.md  BUNDLE_GUIDE.md  DEPLOY_GUIDE.md  DYNAMIC_MULTI_MARKET_PLAN.md  FUTU_FIRST_LOGIN.md  OPERATOR_GUIDE.md  SANDBOX_29MAY_FIXES.md  SWING_STRATEGY_PLAN.md  sam-traderv3_cheat-sheet.html
scripts/: wizard.py
scripts/ralph/: detect_affected_tests.py  monitor_phase3.sh  ralph_check_specs.py  ralph_health.sh  ralph_loop.sh  ralph_metrics.sh  ralph_metrics_viewer.py  ralph_preflight.sh  (+9 more)
tests/: helpers.py
(+204 files in other folders)
