[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam_trader"
version = "0.3.0"
description = "SAM Trader V3 — Production-grade autonomous trading platform built on NautilusTrader"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "SAM Trader Team"},
]
keywords = ["trading", "nautilus", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "nautilus_trader==1.227.0",
    "pyyaml",
    "asyncpg",
    "futu-api",
    "nautilus-ibapi==10.45.1",
    "holidays",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sam_trader = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests requiring external services",
    "e2e: end-to-end tests (operator only)",
    "performance: performance benchmarks (operator only)",
    "broker_live: tests requiring live broker connection",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
